Fixed some spacing on the projects section and added better padding for navigation bar

--- a/public_html/documentation/milestone-3/output.css
+++ b/public_html/documentation/milestone-3/output.css
@@ -1587,6 +1587,10 @@ html{
   padding-top: 5rem;
 }
 
+.pt-10{
+  padding-top: 2.5rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -1848,6 +1852,10 @@ html{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:p-10{
+    padding: 2.5rem;
+  }
+
   .md\:p-3{
     padding: 0.75rem;
   }
@@ -1919,6 +1927,10 @@ html{
     margin-top: 14rem;
   }
 
+  .lg\:mt-0{
+    margin-top: 0px;
+  }
+
   .lg\:flex{
     display: flex;
   }
@@ -1946,6 +1958,10 @@ html{
   .lg\:px-72{
     padding-left: 18rem;
     padding-right: 18rem;
+  }
+
+  .lg\:pt-0{
+    padding-top: 0px;
   }
 
   .lg\:text-2xl{
@@ -2006,6 +2022,11 @@ html{
 
   .lg\:\*\:flex > *{
     display: flex;
+  }
+
+  .lg\:\*\:grayscale-\[95\%\] > *{
+    --tw-grayscale: grayscale(95%);
+    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   }
 
   .hover\:lg\:shadow-\[35px_35px_0_0_white\]:hover{
